--- a/app/ui/legacy/src/main/res/values/themes.xml
+++ b/app/ui/legacy/src/main/res/values/themes.xml
@@ -48,6 +48,7 @@
         <item name="iconActionRefresh">@drawable/ic_refresh</item>
         <item name="iconActionSearch">@drawable/ic_magnify</item>
         <item name="iconActionSearchFolder">@drawable/ic_folder_magnify</item>
+        <item name="iconSignEmail">@drawable/ic_signature</item>
         <item name="iconActionSend">@drawable/ic_send</item>
         <item name="iconActionSettings">@drawable/ic_cog</item>
         <item name="iconActionSort">@drawable/ic_sort</item>
